# Remote-Memory

./: README.md
Ejemplo/: CMakeLists.txt  main.cpp
RMlib/: CMakeLists.txt  rmlib.cpp
Server/: CMakeLists.txt  MemoryList.h  Server.cpp
